# broker

./: .gitignore  CHANGELOG.md  Readme.md
analysis/: Pipfile  Readme.md
analysis/notebooks/: Genetic Algo.ipynb  Untitled.ipynb  get-data-metatrader.ipynb
analysis/notebooks/.ipynb_checkpoints/: get-data-metatrader-checkpoint.ipynb
backend/: docker-compose.yaml  go.work  go.work.sum  prometheus.yaml
backend/go-commons/: go-commons  go.mod  go.sum  main.go
backend/go-commons/config/: config.go
backend/go-commons/domain/: init.go
backend/go-commons/domain/vo/: date.go  datetime.go  email.go  email_test.go  id.go  name.go  password.go  secret.go  secret_test.go  url.go
backend/go-commons/error/: error.go
backend/go-commons/infrastructure/database/: gorm.go
backend/go-sts-service/: Dockerfile  config.yaml  go.mod  main.go
backend/go-sts-service/application/: adapter.go  client_credentials_application.go  oauth_token_application.go  sts_adapter.go  sts_application.go
backend/go-sts-service/dto/: dto.go
backend/go-user-service/: config.yaml  go.mod  main.go
backend/go-user-service/application/: user_adapter.go  user_application.go
backend/go-user-service/config/: config.go
backend/python-finance-service/: pyproject.toml
backend/scripts/: init.sql
backend/user-service/: config.yaml  go.mod  go.sum  main.go
backend/user-service/application/: adapter.go  create_user.go  get_user.go
backend/user-service/config/: config.go  config.yaml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
(+97 files in other folders)
