[tool.poetry]
name = "python-finance-service"
version = "0.1.0"
description = "finance service for broker"
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
